overflow fix

--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -10,6 +10,7 @@
   h1 {
     font-size: clamp(3.25rem, 10vw, 6.55rem);
     overflow-wrap: anywhere;
+    transform: translateY(1.5rem);
   }
   & > img {
     width: 450px;
